# monaka-fs

./: .gitignore  .release-please-manifest.json  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  docker-compose.yml  lefthook.yml  plan.md  release-please-config.json
.github/workflows/: ci.yml  release.yml
benchmarks/01-tmpfs-vs-vfs/: README.md  run-bench-vm.sh
benchmarks/02-wasi-virt-vs-vfs/: README.md  run-bench.sh
benchmarks/03-local-vs-rpc/: README.md  run-bench-vm.sh  run-bench.sh
benchmarks/04-s3fs-vs-s3sync/: README.md  run-bench-vm-realtime.sh  run-bench-vm.sh  run-bench.sh  transfer-to-vm.sh
benchmarks/06-all-methods/: README.md  run-bench.sh
benchmarks/07-s3fs-vs-vfshost/: README.md  docker-compose.yml  run-bench-vm-realtime.sh  run-bench-vm-s3passthrough.sh  run-bench-vm.sh  run-bench.sh  transfer-to-vm.sh
benchmarks/08-s3-sync-all-methods/: README.md  docker-compose.yml  run-bench-vm.sh  transfer-to-vm.sh
benchmarks/all-methods/: README.md  build.sh  run.sh
benchmarks/all-methods/bench-runner/: Cargo.toml
benchmarks/all-methods/bench-runner/src/: main.rs
benchmarks/lock-strategy/: README.md
benchmarks/lock-strategy/bench-runner/: Cargo.toml  run.sh
benchmarks/lock-strategy/bench-runner/src/: bench_fine.rs
benchmarks/s3-sync-all-methods/: .env.example  README.md  build.sh  run.sh  transfer.sh
benchmarks/s3-sync-all-methods/bench-runtime/: Cargo.toml
benchmarks/s3-sync-all-methods/bench-runtime/src/: main.rs
benchmarks/scripts/: build-for-vm.sh  transfer-to-vm.sh  vm-setup.sh
benchmarks/tmpfs-vs-vfs/: README.md  build.sh  run.sh  transfer.sh
benchmarks/wasi-virt-vs-vfs/: README.md  build.sh  run.sh
cli-stub/: Cargo.toml
cli-stub/src/: lib.rs
crates/adapters/rpc-adapter/: CHANGELOG.md  Cargo.toml
crates/adapters/rpc-adapter/src/: lib.rs  protocol.rs
crates/adapters/vfs-adapter/: CHANGELOG.md  Cargo.toml  build.rs
crates/adapters/vfs-adapter/src/: lib.rs
crates/adapters/vfs-adapter/src/s3_sync/: file_metadata.rs  mod.rs  s3_client.rs  sync_manager.rs  wasi_http.rs
crates/core/fs-core/: CHANGELOG.md  Cargo.toml
crates/core/fs-core/src/: error.rs  fs.rs  fs_singlethread.rs  handle.rs  lib.rs  snapshot.rs  storage.rs  time.rs  types.rs
crates/core/fs-core/tests/: test_fs.rs  test_storage.rs
crates/hosts/vfs-host/: CHANGELOG.md  Cargo.toml  README.md
crates/hosts/vfs-host/src/: filesystem_preopens.rs  filesystem_types.rs  lib.rs  sync_hooks.rs
crates/rpc/vfs-rpc-protocol/: CHANGELOG.md  Cargo.toml  build.rs
crates/rpc/vfs-rpc-protocol/proto/: vfs.proto
crates/rpc/vfs-rpc-protocol/src/: lib.rs  messages.rs
crates/rpc/vfs-rpc-protocol/tests/: test_protocol.rs
crates/rpc/vfs-rpc-server/: CHANGELOG.md  Cargo.toml
crates/rpc/vfs-rpc-server-core/: CHANGELOG.md  Cargo.toml
crates/rpc/vfs-rpc-server-core/src/: lib.rs
crates/rpc/vfs-rpc-server/src/: lib.rs  protocol.rs  s3_client.rs  sync_manager.rs  wasi_http.rs
crates/rpc/vfs-rpc-server/wit/: server.wit
crates/sync/vfs-sync/: Cargo.toml
crates/sync/vfs-sync-adapter/: CHANGELOG.md  Cargo.toml
crates/sync/vfs-sync-adapter/src/: lib.rs  s3_client.rs  sync_manager.rs  wasi_http.rs
crates/sync/vfs-sync-core/: CHANGELOG.md  Cargo.toml
crates/sync/vfs-sync-core/src/: config.rs  file_metadata.rs  fs_backend.rs  lib.rs  s3_client.rs  sync_manager.rs  types.rs
crates/sync/vfs-sync-core/tests/: test_sync_manager.rs
crates/sync/vfs-sync-host/: CHANGELOG.md  Cargo.toml
crates/sync/vfs-sync-host/src/: lib.rs  s3_client.rs  sync_manager.rs
crates/sync/vfs-sync-wasi/: Cargo.toml
crates/sync/vfs-sync-wasi/src/: lib.rs  s3_client.rs  sync_manager.rs
crates/sync/vfs-sync-wasi/wit/: world.wit
crates/sync/vfs-sync/src/: config.rs  lib.rs  s3_client.rs  sync_manager.rs
crates/tools/halycon-pack/: Cargo.toml  README.md
crates/tools/halycon-pack/src/: main.rs
crates/tools/monaka-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/tools/monaka-cli/src/: compose.rs  embed.rs  main.rs  wasm.rs
deprecated/fs-wasm/: Cargo.toml
deprecated/fs-wasm/src/: ffi.rs  lib.rs
deprecated/fs-wasm/tests/: test_ffi.rs
examples/: Makefile  README.md  build-components.sh  compose-demo.sh  compose.wac  run-demo.sh
examples/component-model/static/c/: Cargo.toml  build.rs
examples/component-model/static/c/src/: lib.rs
examples/host-trait/runtime-linker-s3/: Cargo.toml  README.md
examples/host-trait/runtime-linker-s3/src/: main.rs
examples/rpc/demo-app2/: Cargo.toml
examples/rpc/demo-app2/src/: lib.rs
fs-core/: Cargo.toml
fs-wasm/: Cargo.toml
localstack-init/: init-s3.sh
rpc-adapter/: Cargo.toml
scripts/: e2e.sh  install.sh  test-s3-persistence.sh
test-simple/: Cargo.toml
test-simple/src/: main.rs  main2.rs  main3.rs  main4.rs  main5.rs  main6.rs
usecases/: README.md
usecases/benchmarks/05-vfs-rwlock/bench-runtime/: Cargo.toml
usecases/benchmarks/05-vfs-rwlock/bench-runtime/src/: main.rs
usecases/benchmarks/06-lock-strategy/bench-runner/: Cargo.toml
usecases/benchmarks/06-lock-strategy/bench-runtime/: Cargo.toml  run.sh  run_static.sh
usecases/benchmarks/06-lock-strategy/bench-runtime/src/: bench_fine.rs  bench_global.rs  bench_main.rs  bench_unsafe.rs  common.rs  main.rs  test_correctness.rs
usecases/benchmarks/06-lock-strategy/fs-main/: Cargo.toml
usecases/benchmarks/06-lock-strategy/fs-main/src/: error.rs  fs.rs  snapshot.rs  storage.rs  time.rs  types.rs
usecases/benchmarks/06-lock-strategy/fs-unsafe/: Cargo.toml
usecases/benchmarks/06-lock-strategy/fs-unsafe/src/: error.rs  lib.rs  types.rs
usecases/host-concurrent-append/host-runner/: Cargo.toml
usecases/host-concurrent-append/host-runner/src/: main.rs
vfs-adapter/: Cargo.toml
vfs-host/: Cargo.toml  README.md
vfs-host/src/: filesystem_preopens.rs  filesystem_types.rs  lib.rs
vfs-provider/: Cargo.toml  build.rs
vfs-rpc-client/: Cargo.toml
vfs-rpc-host/: Cargo.toml
vfs-rpc-server/: Cargo.toml
vfs-tcp-server/: Cargo.toml
wit/: adapter.wit  logging.wit  rpc-adapter.wit  rpc-client.wit  rpc-server.wit  sync-wasi.wit  world.wit
(+214 files in other folders)
