[workspace]
members = [
  # Core
  "crates/core/fs-core",

  # Adapters
  "crates/adapters/vfs-adapter",
  "crates/adapters/rpc-adapter",

  # Hosts
  "crates/hosts/vfs-host",

  # Sync
  "crates/sync/vfs-sync-core",
  "crates/sync/vfs-sync-host",
  "crates/sync/vfs-sync-adapter",

  # RPC
  "crates/rpc/vfs-rpc-protocol",
  "crates/rpc/vfs-rpc-server",

  # Tools
  "crates/tools/halycon-pack",

  # Examples - Apps
  "examples/apps/demo-fs-operations",
  "examples/apps/demo-writer",
  "examples/apps/demo-reader",

  # Examples - Host Trait
  "examples/host-trait/runtime-linker",
  "examples/host-trait/runtime-linker-s3",

  # Use Cases
  "usecases/sensor-pipeline/sensor-ingest",
  "usecases/sensor-pipeline/sensor-process",
  "usecases/sensor-pipeline/runtime-linker",
  "usecases/s3-sync-logging/logger",
  "usecases/http-cache-demo/request-handler",
  "usecases/http-cache-demo/http-server",
  "usecases/ci-cache-demo/ci-job",
  "usecases/image-pipeline-demo/image-processor",
]
default-members = [
  "crates/core/fs-core",
  "crates/hosts/vfs-host",
  "crates/rpc/vfs-rpc-protocol",
  "examples/host-trait/runtime-linker",
]
exclude = [
  ".tmp",
  "deprecated",
  "test-app",
  "test-simple",
  "vfs-rpc-client",
  "vfs-tcp-server",
  "usecases/benchmarks",
]
resolver="3"

[profile.dev]
opt-level = 1

# Workaround for rust-lld crash with crc-fast on wasm32-wasip2
# https://github.com/llvm/llvm-project/issues/ (lld::wasm::ElemSection::writeBody)
[profile.release.package.crc-fast]
opt-level = 1
