[workspace]
members = [
  # Core
  "crates/core/fs-core",

  # Adapters
  "crates/adapters/vfs-adapter",
  "crates/adapters/rpc-adapter",

  # Hosts
  "crates/hosts/vfs-host",

  # Sync
  "crates/sync/vfs-sync-core",
  "crates/sync/vfs-sync-host",
  "crates/sync/vfs-sync-adapter",

  # RPC
  "crates/rpc/vfs-rpc-protocol",
  "crates/rpc/vfs-rpc-server",

  # Tools
  "crates/tools/monaka-cli",

  # Examples - Apps
  "examples/apps/demo-fs-operations",
  "examples/apps/demo-writer",
  "examples/apps/demo-reader",
  "examples/static-composition/embed",

  # Examples - Host Trait
  "examples/host-trait/runtime-linker",
  "examples/host-trait/runtime-linker-s3",

  # Use Cases - Host Trait
  "usecases/host-trait/sensor-pipeline/sensor-ingest",
  "usecases/host-trait/sensor-pipeline/sensor-process",
  "usecases/host-trait/sensor-pipeline/runtime-linker",
  "usecases/host-trait/http-cache/request-handler",
  "usecases/host-trait/http-cache/http-server",

  # Use Cases - RPC Server
  "usecases/rpc-server/s3-sync-logging/logger",
  "usecases/rpc-server/ci-cache/ci-job",

  # Use Cases - Static Composition
  "usecases/static-composition/image-pipeline/image-processor",
]
default-members = [
  "crates/core/fs-core",
  "crates/hosts/vfs-host",
  "crates/rpc/vfs-rpc-protocol",
  "examples/host-trait/runtime-linker",
]
exclude = [
  ".tmp",
  "deprecated",
  "test-app",
  "test-simple",
  "vfs-rpc-client",
  "vfs-tcp-server",
  "usecases/benchmarks",
]
resolver="3"

[profile.dev]
opt-level = 1

# Workaround for rust-lld crash with crc-fast on wasm32-wasip2
# https://github.com/llvm/llvm-project/issues/ (lld::wasm::ElemSection::writeBody)
[profile.release.package.crc-fast]
opt-level = 1
