[package]
name = "fs-wasm"
version = "0.1.0"
edition = "2024"
resolver="3"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
fs-core = { path = "../fs-core", features = ["logging"] }
log = "0.4"

[dev-dependencies]
serial_test = "3.2"

[build-dependencies]
cc = "1.0"

[features]
default = ["std"]
std = []
