[package]
name = "bench-runner"
version = "0.1.0"
edition = "2021"

# Standalone package, not part of workspace
[workspace]

[dependencies]
wasmtime = { version = "44.0.1", features = ["component-model"] }
wasmtime-wasi = "44.0.1"
anyhow = "1.0"
vfs-host = { path = "../../../crates/hosts/vfs-host" }
