[package]
name = "rpc-adapter"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
vfs-rpc-protocol = { path = "../../rpc/vfs-rpc-protocol" }
wit-bindgen = { version = "0.36", default-features = false, features = ["realloc", "macros"] }
prost = "0.13"
log = "0.4"

[build-dependencies]
wit-bindgen = "0.36"
