[package]
name = "vfs-adapter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
s3-sync = [
    "dep:tokio",
    "dep:aws-sdk-s3",
    "dep:aws-config",
    "dep:aws-smithy-async",
    "dep:aws-smithy-runtime-api",
    "dep:aws-smithy-types",
    "dep:http",
    "dep:bytes",
    "dep:futures",
    "dep:log",
]

[dependencies]
fs-core = { path = "../../core/fs-core", features = ["serde"] }
wit-bindgen = { version = "0.36", default-features = false, features = ["realloc", "macros"] }
spin = "0.9"
serde_json = "1"

# S3 sync dependencies (optional)
tokio = { version = "1", features = ["macros", "rt", "time", "sync"], optional = true }
aws-sdk-s3 = { version = "1", default-features = false, optional = true }
aws-config = { version = "1", default-features = false, optional = true }
aws-smithy-async = { version = "1", features = ["rt-tokio"], optional = true }
aws-smithy-runtime-api = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }
http = { version = "1", optional = true }
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }

[build-dependencies]
wit-bindgen = "0.36"
