[package]
name = "vfs-adapter"
version = "0.2.2"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Enable thread-safe fs-core (Arc<RwLock> + DashMap instead of Rc<RefCell> + HashMap)
# This is for benchmarking lock overhead - not needed in production (WASM is single-threaded)
thread-safe = ["fs-core/thread-safe"]
s3-sync = [
    "dep:vfs-sync-adapter",
    "dep:tokio",
    "dep:log",
]

[dependencies]
fs-core = { path = "../../core/fs-core", features = ["serde"] }
wit-bindgen = { version = "0.36", default-features = false, features = ["realloc", "macros"] }
spin = "0.9"
serde_json = "1"

# S3 sync dependencies (optional)
vfs-sync-adapter = { path = "../../sync/vfs-sync-adapter", optional = true }
tokio = { version = "1", features = ["macros", "rt", "time", "sync"], optional = true }
log = { version = "0.4", optional = true }

[build-dependencies]
wit-bindgen = "0.36"
