[package]
name = "fs-core"
version = "0.1.0"
edition = "2024"
resolver="3"

[dependencies]
log = { version = "0.4", optional = true, default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"], optional = true }
dashmap = { version = "6", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = ["dashmap"]
logging = ["dep:log"]
serde = ["dep:serde", "dep:serde_bytes"]
