[package]
name = "vfs-host"
version = "0.2.4"
edition = "2021"
description = "Host trait implementation for VFS adapter - enables multiple applications to share a single VFS instance"
license = "MIT"
repository = "https://github.com/ternbusty/monaka-fs"
keywords = ["wasm", "filesystem", "wasi", "wasmtime", "vfs"]
categories = ["wasm", "filesystem"]

[features]
default = []
# Use external Mutex for VFS access (for benchmarking comparison)
# When enabled, all VFS operations go through Arc<Mutex<Fs>> instead of Arc<Fs>
external-mutex = []
# Enable S3 synchronization support
s3-sync = ["dep:vfs-sync-host", "dep:tokio"]

[dependencies]
# vfs-host requires thread-safe fs-core (wasmtime Host trait requires Send+Sync)
fs-core = { version = "0.2.4", path = "../../core/fs-core", features = ["thread-safe"] }
wasmtime = "27.0.0"
wasmtime-wasi = "27.0.0"
anyhow = "1.0"
bytes = "1.9"
async-trait = "0.1"
log = "0.4"

# S3 sync (optional)
vfs-sync-host = { version = "0.2.4", path = "../../sync/vfs-sync-host", optional = true }
tokio = { version = "1", features = ["rt", "time", "sync"], optional = true }

[lib]
crate-type = ["rlib"]
