[package]
name = "vfs-rpc-protocol"
version = "0.2.2"
edition = "2021"
description = "RPC protocol message types for Monaka VFS"
license = "MIT"
repository = "https://github.com/ternbusty/monaka-fs"

[dependencies]
prost = "0.13"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
anyhow = "1.0"
