[package]
name = "vfs-rpc-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fs-core = { path = "../../core/fs-core", features = ["serde"] }
vfs-rpc-protocol = { path = "../vfs-rpc-protocol" }
vfs-sync-adapter = { path = "../../sync/vfs-sync-adapter" }
prost = "0.13"
wit-bindgen = { version = "0.36", default-features = false, features = ["realloc", "macros"] }
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }

[build-dependencies]
wit-bindgen = "0.36"
