[package]
name = "vfs-rpc-server"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
s3-sync = ["dep:vfs-sync-adapter"]

[dependencies]
fs-core = { path = "../../core/fs-core", features = ["serde"] }
vfs-rpc-protocol = { path = "../vfs-rpc-protocol" }
vfs-sync-adapter = { path = "../../sync/vfs-sync-adapter", optional = true }
prost = "0.13"
wit-bindgen = { version = "0.36", default-features = false, features = ["realloc", "macros"] }
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }

[build-dependencies]
wit-bindgen = "0.36"
