[package]
name = "vfs-sync-host"
version = "0.3.0"
edition = "2021"
description = "S3 synchronization for Monaka VFS (native environment)"
license = "MIT"
repository = "https://github.com/ternbusty/monaka-fs"

[dependencies]
vfs-sync-core = { version = "0.3.0", path = "../vfs-sync-core" }
fs-core = { version = "0.3.0", path = "../../core/fs-core", features = ["thread-safe"] }
log = "0.4"

# AWS SDK
aws-sdk-s3 = "1"
aws-config = "1"

# Async runtime
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
futures = "0.3"
