[package]
name = "vfs-sync-host"
version = "0.2.5"
edition = "2021"
description = "S3 synchronization for Monaka VFS (native environment)"
license = "MIT"
repository = "https://github.com/ternbusty/monaka-fs"

[dependencies]
vfs-sync-core = { version = "0.2.5", path = "../vfs-sync-core" }
fs-core = { version = "0.2.5", path = "../../core/fs-core", features = ["thread-safe"] }
log = "0.4"

# AWS SDK with default features (hyper-based HTTP client) for native use.
aws-sdk-s3 = "1"
aws-config = "1"
