[package]
name = "monaka"
version = "0.1.0"
edition = "2024"
description = "CLI tool for Monaka VFS - embed files, compose WASM components, and extract binaries"
license = "MIT OR Apache-2.0"

[[bin]]
name = "monaka"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# WASM manipulation
wasm-encoder = "0.225"
wasmparser = "0.225"

# WASM composition (wac plug API)
wac-graph = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# fs-core for FsSnapshot types
fs-core = { path = "../../core/fs-core", features = ["serde", "std"] }

# Error handling
anyhow = "1"

# File walking
walkdir = "2"

# Temp files for compose
tempfile = "3"
