[package]
name = "runtime-linker-s3"
version = "0.1.1"
edition = "2021"
publish = false
description = "Example: vfs-host with S3 sync enabled"

[dependencies]
vfs-host = { path = "../../../crates/hosts/vfs-host", features = ["s3-sync"] }
wasmtime = "27.0.0"
wasmtime-wasi = "27.0.0"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11"
log = "0.4"
