[package]
name = "host-concurrent-runner"
version = "0.1.0"
edition = "2021"

# Standalone package, not part of workspace
[workspace]

[dependencies]
# WASM runtime
wasmtime = { version = "27.0", features = ["component-model"] }
wasmtime-wasi = "27.0"

# VFS host implementation
vfs-host = { path = "../../../crates/hosts/vfs-host" }

# Utilities
anyhow = "1.0"

[profile.release]
opt-level = 3
