[package]
name = "component-c"
version = "0.1.0"
edition = "2021"

# Standalone package, not part of workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]

[build-dependencies]
cc = "1.0"

[profile.dev]
opt-level = 2
lto = true

[profile.release]
opt-level = "z"
lto = true
strip = true
