[package]
name = "fs-main"
version = "0.1.0"
edition = "2021"

# Standalone package, not part of workspace
[workspace]

[dependencies]
log = { version = "0.4", optional = true, default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"], optional = true }

[features]
default = ["std"]
std = []
logging = ["dep:log"]
serde = ["dep:serde", "dep:serde_bytes"]
