[package]
name = "fs-unsafe"
version = "0.1.0"
edition = "2021"
description = "No-lock VFS for benchmarking - uses fs-core structures without synchronization"

# Standalone package, not part of workspace
[workspace]

[dependencies]
fs-core = { path = "../../../../crates/core/fs-core", default-features = true }
